# AdventOfCode

./: .gitignore  CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day21.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp  README.md  aoc.cpp  aoc.h  aoc2019.sln  aoc2019.vcxproj  build-debug.bat  build-release.bat  build.ps1  conanfile.txt  intcode.cpp  intcode.h  packages.config  pch.h
.github/workflows/: cmake.yml
2015/: CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp
2019/Cryostasis/: CMakeLists.txt  input.h  main.cpp
2019/Solutions/: CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day05.cpp  Day07.cpp  Day09.cpp  Day10.cpp  Day12.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day22.cpp  Day23.cpp  Day24.cpp  Day25.cpp  pch.h
2020/: CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  pch.h
aoc/: CMakeLists.txt
aoc/include/: aoc.h  intcode.h
aoc/src/: aoc.cpp  intcode.cpp
